# project-magpie

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  backtest_main.py  bat_daemon.py  dashboard.py  development_guide.md  docker-compose.yml  engine_factory.py  live_main.py  main.py  pyproject.toml  requirements.txt  ta_lib-0.6.8-cp314-cp314-win_amd64.whl
agents/: constant.py  utils.py
agents/beaver_balancer/: beaver_balancer.py  prompt.md
agents/meerkat_scanner/: chart_compressor.py  meerkat_scanner.py  meerkat_scanner_prompt.md  node.py  prompt.md  scanner.py  schema.py
agents/owl_director/: decision.py  director.py  node.py  owl_director.py  owl_schema.py  (+5 more)
backtest/: __init__.py  engine.py  reporter.py
bat_daemon/: __init__.py  backtest.py  constant.py  run.py  session_stats.py
core/: __init__.py  constants.py  graph.py  llm.py
daemon/: bat_daemon.py
dashboard/: __init__.py  asyncio_utils.py  backtest.py  common.py  run.py  session.py  sidebar.py
db/: __init__.py  connection.py  entity.py  mongo.py  schemas.py
docs/: project_magpie_manual.html
live/: __init__.py  engine.py
magpie_agent/: __init__.py  graph.py  run.py
main/: graph.py  run.py
providers/: __init__.py  base.py  mongo.py  upbit.py
simulator/: constants.py  data_loader.py  engine.py  run.py  run_simulator.py
state/: agent.py  magpie.py  magpie_state.py
test/: run_simulator.py
tools/: db.py  db_tools.py  market_tools.py  monitor_target.py  monitor_target_tools.py  ohlcv.py  portfolio.py  router.py  strategy.py  strategy_tools.py  trade_history.py  wallet.py
(+61 files in other folders)
